syntax = "proto3";

package yandex.cloud.priv.iam.v1;

option go_package = "iam";
option java_outer_classname = "PUA";

message UserAccount {
  string id = 1;
  oneof user_account {
    YandexPassportUserAccount yandex_passport_user_account = 2;
  }
}

message YandexPassportUserAccount {
  string login = 1;
  string default_email = 2;
}
